[tool.poetry]
name = "aio-net-events"
version = "7.0.0"
description = "Asynchronous network configuration event detector for Python 3.7 and above"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ntamas/aio-net-events/"
repository = "https://github.com/ntamas/aio-net-events/"
authors = ["Tamas Nepusz <tamas@collmot.com>"]
packages = [{ include = "aio_net_events", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8"
anyio = "^4.2.0"
netifaces-plus = ">=0.12.2"
pyobjc-core = { version = "^10.1", platform = "darwin" }
pyobjc-framework-Cocoa = { version = "^10.1", platform = "darwin" }
pyobjc-framework-SystemConfiguration = { version = "^10.1", platform = "darwin" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
coverage = { extras = ["toml"], version = "^7.3.1" }
pytest-cov = "^5.0.0"
trio = ">=0.25"

[tool.poetry.scripts]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
filterwarnings = ["ignore::RuntimeWarning"]

[tool.ruff]
lint.ignore = ["B905", "C901", "E402", "E501"]
lint.select = ["B", "C", "E", "F", "W"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.masonry.api"
